navbar z-index adjusted for correct position to second hero class

--- a/styles/general.css
+++ b/styles/general.css
@@ -35,7 +35,7 @@ body {
     height: var(--navbarHeight);
     background-color: rgba(255, 255, 255, 0.4);
     box-shadow: inset 0 0 5px 0 white;
-    z-index: 1;
+    z-index: 2;
 }
 
 #navbarMenu.is-active {
